[package]
name = "tonic-benchmark"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.6"
tonic = { path = "../tonic", features = ["openssl"] }
prost = "0.5"
bytes = "0.4"

[build-dependencies]
tonic-build = { path = "../tonic-build" }
